// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Product resolver product mutation createProduct creates a new Product 1`] = `
Object {
  "assets": Array [],
  "description": "A baked potato",
  "featuredAsset": null,
  "id": "21",
  "languageCode": "en",
  "name": "en Baked Potato",
  "optionGroups": Array [],
  "slug": "en-baked-potato",
  "translations": Array [
    Object {
      "description": "A baked potato",
      "languageCode": "en",
      "name": "en Baked Potato",
      "slug": "en-baked-potato",
    },
    Object {
      "description": "Eine baked Erdapfel",
      "languageCode": "de",
      "name": "de Baked Potato",
      "slug": "de-baked-potato",
    },
  ],
  "variants": Array [],
}
`;

exports[`Product resolver product mutation updateProduct updates a Product 1`] = `
Object {
  "assets": Array [],
  "description": "A blob of mashed potato",
  "featuredAsset": null,
  "id": "21",
  "languageCode": "en",
  "name": "en Mashed Potato",
  "optionGroups": Array [],
  "slug": "en-mashed-potato",
  "translations": Array [
    Object {
      "description": "A blob of mashed potato",
      "languageCode": "en",
      "name": "en Mashed Potato",
      "slug": "en-mashed-potato",
    },
    Object {
      "description": "Eine blob von gemashed Erdapfel",
      "languageCode": "de",
      "name": "de Mashed Potato",
      "slug": "de-mashed-potato",
    },
  ],
  "variants": Array [],
}
`;

exports[`Product resolver product mutation variants applyFacetValuesToProductVariants adds facets to variants 1`] = `
Array [
  Object {
    "code": "Schneider_Inc",
    "id": "1",
    "name": "Schneider Inc",
  },
  Object {
    "code": "Ledner_-_Smitham",
    "id": "3",
    "name": "Ledner - Smitham",
  },
  Object {
    "code": "Rempel_LLC",
    "id": "5",
    "name": "Rempel LLC",
  },
]
`;

exports[`Product resolver product mutation variants applyFacetValuesToProductVariants adds facets to variants 2`] = `
Array [
  Object {
    "code": "Schneider_Inc",
    "id": "1",
    "name": "Schneider Inc",
  },
  Object {
    "code": "Ledner_-_Smitham",
    "id": "3",
    "name": "Ledner - Smitham",
  },
  Object {
    "code": "Rempel_LLC",
    "id": "5",
    "name": "Rempel LLC",
  },
]
`;

exports[`Product resolver product query returns expected properties 1`] = `
Object {
  "assets": Array [],
  "description": "en Sed dignissimos debitis incidunt accusantium sed libero.",
  "featuredAsset": null,
  "id": "2",
  "languageCode": "en",
  "name": "en Practical Plastic Chicken",
  "optionGroups": Array [
    Object {
      "code": "size",
      "id": "1",
      "languageCode": "en",
      "name": "Size",
    },
  ],
  "slug": "en practical-plastic-chicken",
  "translations": Array [
    Object {
      "description": "en Sed dignissimos debitis incidunt accusantium sed libero.",
      "languageCode": "en",
      "name": "en Practical Plastic Chicken",
      "slug": "en practical-plastic-chicken",
    },
    Object {
      "description": "de Sed dignissimos debitis incidunt accusantium sed libero.",
      "languageCode": "de",
      "name": "de Practical Plastic Chicken",
      "slug": "de practical-plastic-chicken",
    },
  ],
}
`;

exports[`Product resolver products list query sorts by name 1`] = `
Array [
  "en Awesome Granite Chair",
  "en Fantastic Fresh Cheese",
  "en Fantastic Rubber Sausages",
  "en Fantastic Steel Computer",
  "en Gorgeous Plastic Shoes",
  "en Handcrafted Concrete Computer",
  "en Intelligent Steel Ball",
  "en Intelligent Wooden Car",
  "en Licensed Frozen Chair",
  "en Licensed Plastic Bike",
  "en Practical Frozen Fish",
  "en Practical Plastic Chicken",
  "en Refined Cotton Chair",
  "en Refined Plastic Computer",
  "en Rustic Frozen Car",
  "en Rustic Steel Salad",
  "en Sleek Wooden Fish",
  "en Unbranded Concrete Cheese",
  "en Unbranded Concrete Salad",
  "en Unbranded Plastic Pants",
]
`;
